--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>R&B Store</title>
+    <link rel="icon" href="./assets\images\RB-icon.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
@@ -23,7 +24,7 @@
         <div class="nav-side">
             <i class="fas fa-heart navbar-icons"></i>
             <i class="fas fa-shopping-cart navbar-icons"></i>
-            <button class="btn btn-primary">Log In</button>
+            <a href=".\signIn and SignUp\signIn.html"> <button class="btn btn-primary">Log In</button></a>
         </div>
         
     </nav>
