--- a/signIn and SignUp/signUp.html
+++ b/signIn and SignUp/signUp.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>R&B | SignIn</title>
+    <title>R&B | SignUp</title>
     <link rel="icon" href="./../assets\images\RB-icon.png" type="image/icon type">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
     <nav class="nav-container">
-        <a href=".\index.html">
+        <a href=".\..\index.html">
             <p class="nav-title">R<span class="nav-title-short">&</span>B <span class="nav-title-short">Store</span>
             </p>
         </a>
@@ -33,7 +33,7 @@
             <!-- <h1 style="color: aqua;"class="form-subcontainer">LOL</h1> -->
 
     <div class="form-subcontainer">
-        <h3 class="form-title">Sign-In</h3>
+        <h3 class="form-title">SignUp</h3>
         <form action="" class="signIn-form">
             <label for="finput" class="form-label" id="fname-label">
                 First Name
