--- a/signIn and SignUp/signIn.html
+++ b/signIn and SignUp/signIn.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <nav class="nav-container">
-        <a href=".\index.html">
+        <a href=".\..\..\index.html">
             <p class="nav-title">R<span class="nav-title-short">&</span>B <span class="nav-title-short">Store</span>
             </p>
         </a>
@@ -30,7 +30,7 @@
 
     <div  class="form-container">
         
-            <!-- <h1 style="color: aqua;"class="form-subcontainer">LOL</h1> -->
+            
 
     <div class="form-subcontainer">
         <h3 class="form-title">Sign-In</h3>
